# cpp23-type-list

./: .clang-format  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  build.sh
.github/: CODEOWNERS  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labels.yml  stale.yml
docs/: API.md
examples/: .clang-format  type_list_usage.cpp  zip_example.cpp
libs/type-list/: CMakeLists.txt  README.md
libs/type-list/docs/: API.md
libs/type-list/examples/: .clang-format  unzip_example.cpp  zip_with_example.cpp
libs/type-list/modules/: type_list.cppm
libs/type-list/modules/type_list/: back.cppm  concat.cppm  empty.cppm  flatten.cppm  fold_left.cppm  from_pack.cppm  front.cppm  insert.cppm  map.cppm  pop_back.cppm  pop_front.cppm  push_front.cppm  size.cppm  unzip.cppm  zip.cppm  zip_with.cppm
libs/type-list/tests/: .clang-format  zip_test.cpp  zip_with_test.cpp
modules/: type_list.cppm
modules/type_list/: append.cppm  concat.cppm  core.cppm  filter.cppm  flatten.cppm  fold_left.cppm  fold_right.cppm  from_pack.cppm  head.cppm  is_nil.cppm  length.cppm  map.cppm  non_empty.cppm  prepend.cppm  push_back.cppm  reverse.cppm  std.cppm  tail.cppm  type_list.cppm  types.cppm  zip.cppm
modules/type_list/access/: access.cppm  back.cppm  front.cppm  pop_back.cppm  pop_front.cppm
modules/type_list/combine/: combine.cppm  flatten.cppm  reverse.cppm  unzip.cppm  zip.cppm  zip_with.cppm
modules/type_list/construct/: concat.cppm  construct.cppm  from_pack.cppm  insert.cppm  push_back.cppm  push_front.cppm
modules/type_list/core/: core.cppm  type_list.cppm  types.cppm
modules/type_list/traits/: empty.cppm  non_empty.cppm  size.cppm  traits.cppm
modules/type_list/transform/: filter.cppm  fold_left.cppm  fold_right.cppm  map.cppm  transform.cppm
scripts/: check-no-includes.sh  ci.sh  format-check.sh  format.sh  gen_compile_commands.sh  install-hooks.sh  install-llvm-apt.sh  install-llvm-linux-ci.sh
tests/: .clang-format  append_test.cpp  concat_test.cpp  core_test.cpp  filter_test.cpp  flatten_test.cpp  fold_left_test.cpp  fold_right_test.cpp  from_pack_test.cpp  head_test.cpp  is_nil_test.cpp  length_test.cpp  map_test.cpp  prepend_test.cpp  reverse_test.cpp  tail_test.cpp  unzip_test.cpp  zip_test.cpp
